# som-devops-homework

ansible-project/: README.md  ansible.cfg  deploy.yml  inventory.ini  vars.example.yml
api-project/: README.md  main.py  pyproject.toml
api-project/app/: __init__.py  error_handlers.py  logging_config.py  main.py  settings.py
api-project/app/api/: __init__.py  health.py  routes_hub.py  routes_service_order.py
api-project/app/models/: __init__.py  common.py  enums.py  hub.py  notifications.py  service_order.py
api-project/app/repositories/: __init__.py  memory_store.py
api-project/app/services/: __init__.py  hub_service.py  notification_service.py  query_service.py  service_order_service.py
api-project/app/utils/: __init__.py  errors.py
api-project/postman/: TMF641_Demo.postman_collection.json  TMF641_Demo.postman_environment.json
api-project/tests/: conftest.py  test_hub_api.py  test_notifications.py  test_service_order_api.py
