[project]
name = "api-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.6",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
